--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,8 @@ website:
   navbar:
     right:
       - about.qmd
+      - publications.qmd
+      - labbook.qmd
       - icon: github
         href: https://github.com/
       - icon: twitter
